--- a/introduce.html
+++ b/introduce.html
@@ -17,11 +17,33 @@
     }
   </style>
   <body>
-    <h1>罗翔</h1>
+    <nav>
+      <ul>
+        <li><a href="#LX" style="text-decoration: none;">个人简介</a></li>
+        <li><a href="#FL" style="text-decoration: none;">履历</a></li>
+        <li>
+          <a href="#study" style="text-decoration: none;">学术作品</a>
+          <ul>
+            <li>
+              <a href="#alone" style="text-decoration: none;"
+                ><span>&emsp;独著</span></a
+              >
+            </li>
+            <li>
+              <a href="#LA" style="text-decoration: none;"
+                ><span>&emsp;主要文章</span></a
+              >
+            </li>
+          </ul>
+        </li>
+        <li><a href="#picture" style="text-decoration: none;">生活照</a></li>
+      </ul>
+    </nav>
+    <h1 id="LX">罗翔</h1>
     <p>
       湖南耒阳人，北京大学法学博士。现任中国政法大学刑法学教授，刑法学研究所所长，华一律师事务所兼职律师。其主要研究领域为刑法学、刑法哲学、经济刑法、性犯罪。在学校向本科生和研究生开设刑法总则、刑法分则、经济刑法、刑法研讨等多门课程
     </p>
-    <h2>履历</h2>
+    <h2 id="FL">履历</h2>
     <p>
       1995年，罗翔进入中国青年政治学院学习，并于1999年获得法学学士学位。随后前往中国政法大学研究生院，于2002年获得刑法学硕士学位。2005年于北京大学法学院毕业，获得刑法学博士学位。
     </p>
@@ -31,9 +53,9 @@
     <p>
       2020年初，因其《罗翔讲刑法》系列视频中讲解法考知识点所举的例子幽默风趣，形成网络爆红。其上课视频截图所制作的表情包在网络上疯传，并被称为法王。3月9日，受邀请正式入驻B站，一天粉丝破百万。
     </p>
-    <h2>学术作品</h2>
+    <h2 id="study">学术作品</h2>
     <section>
-      <h3>独著</h3>
+      <h3 id="alone">独著</h3>
       <ul>
         <li>《刑法学总论》</li>
         <li>《刑法中的同意制度》</li>
@@ -42,7 +64,7 @@
       </ul>
     </section>
     <section>
-      <h3>主要文章</h3>
+      <h3 id="LA">主要文章</h3>
       <ol>
         <li>
           1.狂热的魔咒理性的自负——《自由·平等·博爱》读后及对刑法学研究方法的反思，《政法论坛》2018年第5期
@@ -84,9 +106,21 @@
         <li>22.“回溯与前瞻——女性性自治权的刑法保护”，《河北法学》2008年12期</li>
       </ol>
     </section>
-    <h2>生活照</h2>
-    <div><img src="1.jpg" alt="图一" width="200" /></div>
-    <div><img src="2.jpg" alt="图二" width="200" /></div>
-    <div><img src="3.jpg" alt="图三" width="200" /></div>
+    <h2 id="picture">生活照</h2>
+    <div>
+      <a href="1.jpg " target="_blank"
+        ><img src="1.jpg" alt="图一" width="400"
+      /></a>
+    </div>
+    <div>
+      <a href="2.jpg " target="_blank"
+        ><img src="2.jpg" alt="图二" width="400"
+      /></a>
+    </div>
+    <div>
+      <a href="3.jpg " target="_blank"
+        ><img src="3.jpg" alt="图三" width="400"
+      /></a>
+    </div>
   </body>
 </html>
